# uptime-service-validation

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  podman-compose.yaml  pyproject.toml  tasks.py
.github/workflows/: ci.yaml  publish.yaml
_old/: README.md
_old/leaderboard-bot/: requirements.txt
_old/leaderboard-bot/minanet_app/: entrypoint  logger_util.py  multiprocessing.py  reprocess_missing_batch_v3.py  survey_collect.py  update_score_history.py
_old/leaderboard-bot/minanet_app/Validation/: helper.py  zkValidator_test.py
_old/leaderboard-ui/: readme.md
_old/leaderboard-ui/web-dev/php/: Dockerfile  getData.php  getPageData.php  index.php  showDataForTabOne.php  showDataForTabTwo.php
_old/payout-process/main_app/: calculate_email.py  calculation_scheduler.sh  entrypoint  payout_master.py  payouts_config.py
automation/services/mina-bp-stats/: .gitignore
automation/services/mina-bp-stats/leaderboard-bot/: Dockerfile  config_variables.env
automation/services/mina-bp-stats/leaderboard-bot/database/: Dockerfile
automation/services/mina-bp-stats/leaderboard-bot/minanet_app/: config.py  download_batch_files.py  mina_cron  mina_cron.sh  survey_collect_reprocess.py  survey_collect_stateless.py  survey_collect_v3.py
automation/services/mina-bp-stats/leaderboard-bot_v2/: requirements.txt
automation/services/mina-bp-stats/leaderboard-bot_v2/coordinator/: coordinator.py  helper.py  test.py
automation/services/mina-bp-stats/leaderboard-bot_v2/database/: createDB.sql
automation/services/mina-bp-stats/payout-process/: Dockerfile  README.md  payout_config_variables.env
automation/services/mina-bp-stats/payout-process/main_app/: mf_calculate_email_template_v1.html  payout_summary_mail.py  payouts_calculate.py  payouts_validate.py  validate_email.py  validation_scheduler.sh
leaderboard-bot_v2/: .env  requirements.txt
leaderboard-bot_v2/coordinator/: server.py  test_helper.py
tests/: __init__.py  test_aws_keyspaces_client.py  test_helper.py  test_server.py
uptime_service_validation/: .env
uptime_service_validation/coordinator/: aws_keyspaces_client.py  config.py  coordinator.py  helper.py  server.py
uptime_service_validation/database/: createDB.sql  create_tables.sql
(+12 files in other folders)
